Prevent zooming on mobile

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -430,7 +430,7 @@ a {
   }
 
   #education.tab #uist-vid {
-    width: 360px;
+    width: 325px;
     height: 205px;
   }
 }
